# nocelium

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile  shell.nix
config/: nocelium.toml
crates/nocelium-channels/: Cargo.toml
crates/nocelium-channels/src/: event.rs  lib.rs  outbound.rs  stdio.rs  telegram.rs
crates/nocelium-core/: Cargo.toml
crates/nocelium-core/src/: agent.rs  collected_message.rs  collector.rs  config.rs  dispatch.rs  handlers.rs  identity.rs  lib.rs  logging.rs
crates/nocelium-core/src/sources/: cron.rs  mod.rs
crates/nocelium-memory/: Cargo.toml
crates/nocelium-memory/src/: client.rs  error.rs  lib.rs  types.rs
crates/nocelium-tools/: Cargo.toml
crates/nocelium-tools/src/: error.rs  filesystem.rs  lib.rs  nomen_search.rs  nomen_store.rs  shell.rs  telegram.rs
docs/: channels.md  config.md  dispatch.md  event-sources.md  memory.md  nomen-contract.md  payments.md  tools.md
docs/superpowers/plans/: 2026-03-22-telegram-channel.md
scripts/: check.sh
src/: main.rs
